2007-09-24  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Check for mingwm10.dll.
	* src/gpg4win.mk.in: Fix clean-PKG for binary packages.
	* src/inst-qt.nsi: Install QtDBus4.dll.  Do not install debug and
	source files.
	* src/uninst-qt.nsi: Likewise for uninstall.
	* packages/packages.current: Update Qt.

2007-09-17  Werner Koch  <wk@g10code.com>

	* configure.ac: Set version to 1.9.0-svn.  Make gpgme depend on qt
	again.
	* src/Makefile.am (gpg4win_pkg_gpgme_configure): Enable Qt again.
	* packages/packages.current: Disable gpgee, enable gpgex.
	
2007-09-17  Werner Koch  <wk@g10code.com>

	Released 0.9.92.

	* src/Makefile.am (gpg4win_pkg_gpgme_configure): Disable Qt
	requirement.
	* configure.ac: Ditto.

	* packages/packages.current: Update gpgol to 0.9.92 and gpgme to a
	new snapshot. Disable gpgex, enable gpgee.

2007-09-12  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update dirmngr.

2007-09-11  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update gpgex.

	* packages/packages.current: Add gpgex, disable gpgee.

	* packages/packages.current: Bump gnupg to 2.0.7.

	* src/qt.conf: New file.
	* src/inst-qt.nsi: Install qt.conf.

2007-09-10  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update gpgme and libassuan to
	snapshot pacakages.

2007-09-07  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Add libassuan as dependency for GpgEX.
	* src/Makefile.am (gpg4win_pkg_gpgex_configure): Add gpg-error and
	libassuan configure options.

	* configure.ac: Add qt as dependency for GPGME.
	* src/inst-sections.nsi [HAVE_PKG_QT]: Make GPGME depending on Qt. 
	* src/inst-gpgme.nsi: Change condition from !GPG4WIN_LIGHT to HAVE_PKG_QT.

	* src/Makefile.am (gpg4win_pkg_gpgme_configure): Remove LDFLAGS,
	add --enable-w32-qt and work around Qt's lack of cross compilation
	support.
	* src/gpg4win.mk.in (stamps/stamp-$(1)-02-configure): Call